Fixed issue with first level link not being symmetrical when links wrap

--- a/css/version5/custom.css
+++ b/css/version5/custom.css
@@ -130,6 +130,13 @@ ul.utility-links.social-media-links{
 .second-level-nav li{
      float: left;
 }
+.first-level-link{
+  	display: table;
+    height: 100%;
+}
+.first-level-link>span[class^="ca-gov-icon"]{
+  display: table-row;
+}
 /* Full Sub-Nav */
 .main-navigation.megadropdown .unit1 .second-level-link{
   height: 65px;
